k8s/command-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-service
  template:
    metadata:
      labels:
        app: command-service
    spec:
      # 메인 컨테이너가 시작되기 전에 실행될 컨테이너들
      containers:
      - name: command-service
        image: kyla333/command-service:latest # 사용자 ID 확인
        ports:
        - containerPort: 8080
        # 서비스 준비 상태 확인
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
        # 서비스 생존 상태 확인 (실패 시 재시작)
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
        # 환경 변수를 명시적으로 주입
