k8s/query-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      # 메인 컨테이너가 시작되기 전에 실행될 컨테이너들
      containers:
      - name: query-service
        image: kyla333/query-service:latest # 사용자 ID 확인
        ports:
        - containerPort: 8081
        # 환경 변수를 명시적으로 주입
