k8s/command-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: command-service
spec:
  selector:
    app: command-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
