k8s/mongo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless-service
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
