k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service # 이 이름이 클러스터 내의 DB 주소가 됩니다.
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
