k8s/query-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  type: NodePort # 외부에서 접속 가능하도록 NodePort 타입으로 설정
  selector:
    app: query-service
  ports:
  - protocol: TCP
    port: 8081      # 클러스터 내부에서 사용할 포트
    targetPort: 8081  # Pod(컨테이너)의 포트
    # nodePort: 30001 # 포트를 지정할 수도 있고, 생략하면 쿠버네티스가 남는 포트를 자동 할당
